# weaviate-demo

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  check_weaviate.py  docker-compose.yml  hello.py  pyproject.toml
app/: main.py
app/api/: __init__.py
app/api/middleware/: __init__.py
app/api/routes/: health.py  search.py
app/config/: __init__.py
app/core/: __init__.py  embedder.py  llm.py  logger.py  search.py
app/data/: collection.py  images.py
app/indexer/: __main__.py
app/models/: exceptions.py  search.py
app/services/: __init__.py  embedder.py  search.py
app/utils/: __init__.py
configs/: config.yml
frontend/src/: App.css  App.tsx
